base/web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - port: 80
      name: "web80"
      targetPort: 3000
      protocol: TCP
  selector:
    name: web
